--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Server for j9dl matchmaking system",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^0.8.3",
     "bluebird": "^2.9.30",
     "express": "^4.12.4",
     "mongoose": "^4.0.5"
