--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "bcrypt": "^0.8.3",
     "bluebird": "^2.9.30",
+    "body-parser": "^1.13.1",
     "express": "^4.12.4",
+    "express-validator": "^2.12.1",
+    "method-override": "^2.3.3",
     "mongoose": "^4.0.5"
   },
   "devDependencies": {},
