--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular-seed",
+  "name": "j9dl-client",
   "private": true,
   "version": "0.0.0",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "description": "Frontend client for j9dl server",
+  "repository": "https://github.com/dcosgrove/j9dl/client",
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
