--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "express-validator": "^2.12.1",
     "lodash": "^3.9.3",
     "method-override": "^2.3.3",
-    "mongoose": "^4.0.5"
+    "mongoose": "^4.0.5",
+    "socket.io": "^1.3.5"
   },
   "devDependencies": {},
   "scripts": {
