--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.11.3",
     "express-validator": "^2.12.1",
     "lodash": "^3.9.3",
+    "mathjs": "^1.7.0",
     "method-override": "^2.3.3",
     "mongoose": "^4.0.5",
     "socket.io": "^1.3.5"
