--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "mathjs": "^1.7.0",
     "method-override": "^2.3.3",
     "mongoose": "^4.0.5",
+    "morgan": "^1.6.1",
     "socket.io": "^1.3.5"
   },
   "devDependencies": {},
