--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,10 @@
     "mathjs": "^1.7.0",
     "method-override": "^2.3.3",
     "mongoose": "^4.0.5",
+    "mongoose-findorcreate": "^0.1.2",
     "morgan": "^1.6.1",
+    "passport": "^0.2.2",
+    "passport-steam": "^0.1.5",
     "socket.io": "^1.3.5"
   },
   "devDependencies": {},
